
In 0.22

* Publishing of scripts from command line : pypublish script
* Conversion between input formats and markups: Pweave-convert script
* New input formats:
	- Script
	- IPython notebook
* Bugfix: setting figure format from command line fixed.
* Ipython terminal
* Source option for chunks
	- Read from module
	- Read from file
* Multichunk blocks: complete option
* rst format uses `.. codeblock::` python directive for code chunks.
* New options for figures
	- f_size ( (8,6) ) Saved figure size in inches a tuple (w, h) 
	- f_env (None) Environment that goes around figure e.g. sidefigure
	- complete (False)
	- source: Read chunk source from file or python module or file 